--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "joi": "^17.13.3",
@@ -20,5 +21,6 @@
   "devDependencies": {
     "nodemon": "^3.1.7"
   },
-  "type": "module"
+  "type": "module",
+  "proxy": "http://localhost:5000"
 }
